# ml_rookie

./: .env
0_first_rag_chatbot/: create_receiver.py
0_first_rag_chatbot/chroma_data/67a858d7-7ea9-403a-b285-8121b8d6478f/: index_metadata.pickle
1_business_case_chatbot/: .env  docker_remove_all.sh  docker_run_compose.sh  docker_stop_all.sh
1_business_case_chatbot/chatbot_api/: pyproject.toml
1_business_case_chatbot/chatbot_api/src/chains/: hospital_review_chain.py
1_business_case_chatbot/chatbot_api/src/chatbot_api.egg-info/: PKG-INFO  requires.txt
1_business_case_chatbot/hospital_neo4j_etl/: Dockerfile
1_business_case_chatbot/hospital_neo4j_etl/src/: entrypoint.sh  hospital_bulk_csv_write.py
2_second_rag_chatbot/: chatbot.py  create_receiver.py
2_second_rag_chatbot/chroma_data/: chroma.sqlite3
3_rag_chatbot_web/: rag_streamlit.py
langchain_intro/: chatbot.py  create_receiver.py
langchain_intro/chroma_data/574fbb81-0fdd-44c9-bc70-6ce2d7c0b625/: index_metadata.pickle
langchain_intro/chroma_data/5e4ecad8-c7c5-4a19-b621-050f5a83e2c6/: index_metadata.pickle
langchain_intro/chroma_data/ee75ce07-85f3-4d39-830e-2d98f24d2898/: index_metadata.pickle
